--- a/index.html
+++ b/index.html
@@ -4,6 +4,9 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Kitty Food</title>
+    <link rel="preconnect" href="https://fonts.googleapis.com">
+    <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
+    <link href="https://fonts.googleapis.com/css2?family=Inter:wght@100..900&display=swap" rel="stylesheet">
     <link rel="stylesheet" href="css/main.css">
 </head>
 <body>
@@ -21,15 +24,15 @@
                     <img src="menu.svg" alt="Open menu">
                 </a>
                 <ul>
-                    <li>
-                        <a href="" class="menu-close">
+                    <li class="hide-desktop">
+                        <a href="#" class="menu-close">
                             <img src="close.svg" alt="Close menu">
                         </a>
-                        <li><a href="#">Our Food</a></li>
-                        <li><a href="#">Ingredients</a></li>
-                        <li><a href="#">Studies</a></li>
-                        <li><a href="#">FAQ</a></li>
                     </li>
+                    <li><a href="#">Our Food</a></li>
+                    <li><a href="#">Ingredients</a></li>
+                    <li><a href="#">Studies</a></li>
+                    <li><a href="#">FAQ</a></li>
                 </ul>
             </nav>
         </header>
@@ -52,4 +55,18 @@
         </div>
     </div>
 </body>
+
+<script>
+    const menu = document.querySelector('nav ul');
+    const menuBtn = document.querySelector('.menu-open');
+    const closeBtn = document.querySelector('.menu-close');
+
+    menuBtn.addEventListener('click', ()=>{
+        menu.classList.add('open')
+    });
+
+    closeBtn.addEventListener('click', ()=>{
+        menu.classList.remove('open')
+    });
+</script>
 </html>
